cmake_minimum_required(VERSION 3.16)
set(PROJ_NAME "git-lfs-test-app")
project(${PROJ_NAME})
set(APP_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/install/")
set(PROJECT_INCLUDE_DIR include)
set(PROJECT_LIB_DIR lib)
set(GLOBAL_INSTALL_SYM_NAMELINK "" CACHE STRING "" )
set(CMAKE_BUILD_WITH_INSTALL_RPATH OFF)
set(LIBRARY_PERMISSIONS 
    OWNER_READ 
    OWNER_WRITE
    OWNER_EXECUTE
    GROUP_READ
    GROUP_EXECUTE
    WORLD_READ)
set(HEADER_FILE_PERMISSIONS
    OWNER_READ
    GROUP_READ
    WORLD_READ)
set(EXECUTABLE_PERMISSIONS 
        OWNER_READ 
        OWNER_WRITE
        OWNER_EXECUTE
        GROUP_READ
        GROUP_EXECUTE
        WORLD_READ)
set(RELATIVE_LIB_SUBMODULE_DIR "git-lfs-test-lib/Bin/release_install")
set(LIB_SUBMODULE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${RELATIVE_LIB_SUBMODULE_DIR}")
set(LIB_SUBMODULE_CMAKE_DIR "${LIB_SUBMODULE_DIR}/Cmake")

# Include library CMake
include(${LIB_SUBMODULE_CMAKE_DIR}/lib-install-package-def.cmake)

# Test app compilation
set(TEST_APP test-app)
add_executable(${TEST_APP} TestApp.cpp)
target_include_directories(${TEST_APP} PRIVATE ${PROJECT_INCLUDE_DIR})
target_link_libraries(${TEST_APP} PRIVATE ${TEST_LIB_NAME})
install(TARGETS ${TEST_APP} DESTINATION ${APP_INSTALL_DIR} PERMISSIONS ${EXECUTABLE_PERMISSIONS})